Added step 7 checklist and debugged CSS nested list issue

--- a/index.html
+++ b/index.html
@@ -365,11 +365,34 @@
                     <h3>Implementation Strategy</h3>
                     <p>Your roadmap to electrification:</p>
                     <ul>
-                        <li>Timeline planning</li>
-                        <li>Budget considerations</li>
-                        <li>Incentives and rebates</li>
-                        <li>Contractor selection</li>
-                        <li>Permit requirements</li>
+                        <li>Timeline planning: which of these do you want to do first?
+                            <ul>
+                                <li>If you're using the bottom-up approach (NEC 220.83), you can do it all at once.</li>
+                                <li>If you're using the top-down approach (NEC 220.87), it helps to break up your project into phases. For example, you might do your heating system first, then your water heater, then your cooking appliances, etc. Between each project you can take 30 days to recalculate your remaining panel capacity.</li>
+                            </ul>
+                        </li>
+                        <li>Budget considerations: what is your budget for this project?</li>
+                        <li>Incentives and rebates: what incentives and rebates are available for your project?
+                            <ul>
+                                <li>There are many rebates and incentives available for electrification projects</li>
+                                <li>Check for Federal, State, Local and utility rebates</li>
+                                <li>Find incentives by zip code at <a href="https://www.switchison.org/ca" target="_blank">SwitchIsOn.org</a></li>
+                            </ul>
+                        </li>
+                        <li>Contractor selection: who will you hire to do the work?
+                            <ul>
+                                <li>Check for contractors who specialize in electrification</li>
+                                <li>Check for contractors who have experience with your type of project</li>
+                                <li>Find a list of experienced contractors at <a href="https://www.switchison.org/contractor-finder" target="_blank">SwitchIsOn.org</a></li>
+                            </ul>
+                        </li>
+                        <li>Permit requirements: what permits are required for your project?
+                            <ul>
+                                <li>Check with your local government for permit requirements</li>
+                                <li>Check with your utility for permit requirements</li>
+                                <li>Check with your contractor for permit requirements</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <form class="checklist-form" autocomplete="off">
