--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                                     <th>Manufacturer</th>
                                     <th>Model</th>
                                     <th>Panel Amps (240V)</th>
+                                    <th>Capacity Factor</th>
                                     <th>Cost Range</th>
                                     <th>Details</th>
                                 </tr>
