--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                 <br><p>The first approach is easy if you have a smart meter, but it's not always available. The second approach always works, but it's more time-consuming.</p>
                 <section id="step4-1" class="content-box">
                     <h3>4.1 Top-Down Approach</h3>
+                    <p><strong>Note:</strong> You must complete Step 3 (enter your panel size) before entering capacity values below.</p>
                     <p>Use your actual electricity usage data to determine your available panel capacity:</p>
                     <ol>
                         <li>Visit the <a href="https://panel.hea.com/" target="_blank">Panel Capacity Calculator</a></li>
@@ -236,17 +237,19 @@
                             id="topDownCapacity" 
                             name="topDownCapacity"
                             min="0"
-                            max="1000"
                             step="1"
                             placeholder="e.g., 40"
                             class="large-input"
+                            data-validation="panel-size"
                         >
                         <p class="form-help">Enter the available capacity shown by the Panel Capacity Calculator</p>
+                        <div id="topDownCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
                     </form>
                 </section>
 
                 <section id="step4-2" class="content-box">
                     <h3>4.2 Bottom-Up Approach</h3>
+                    <p><strong>Note:</strong> You must complete Step 3 (enter your panel size) before entering capacity values below.</p>
                     <p>Calculate your available panel capacity by adding up your current electrical loads:</p>
                     <ol>
                         <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a></li>
@@ -260,12 +263,13 @@
                             id="bottomUpCapacity" 
                             name="bottomUpCapacity"
                             min="0"
-                            max="1000"
                             step="1"
                             placeholder="e.g., 35"
                             class="large-input"
+                            data-validation="panel-size"
                         >
                         <p class="form-help">Enter the available capacity shown by the calculator</p>
+                        <div id="bottomUpCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
                     </form>
                 </section>
 
@@ -312,8 +316,7 @@
                             <thead>
                                 <tr>
                                     <th>Appliance Type</th>
-                                    <th>Manufacturer</th>
-                                    <th>Model</th>
+                                    <th>Name</th>
                                     <th>Panel Amps (240V)</th>
                                     <th>Capacity Factor</th>
                                     <th>Cost Range</th>
