Save appliance selections to project file (JSON)

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div class="content-box">
                     
                     <h3>Table of Appliance Options</h3>
-                    <p>Based on your electrification goals, the table below shows an example configuration of low power electric appliances available in our database:</p>
+                    <p>Based on your electrification goals, the table below shows an example configuration of low power electric appliances available in our database. Feel free to change the product selections using the dropdown menu(s) in the table.</p>
                     
                     <div id="csvAppliancesTable" class="csv-appliances-table">
                         <table class="appliances-table">
