Fixed references to coincidence factor for NEC 220.83

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     <th>Appliance Type</th>
                                     <th>Name</th>
                                     <th>Panel Amps (240V)</th>
-                                    <th>Capacity Factor</th>
+                                    <th>Coincidence Factor (CF)</th>
                                     <th>Cost Range</th>
                                     <th>Details</th>
                                 </tr>
