Reduce Coincidence Factor column name to CF and added Note

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     <th>Appliance Type</th>
                                     <th>Name</th>
                                     <th>Panel Amps (240V)</th>
-                                    <th>Coincidence Factor (CF)</th>
+                                    <th>CF</th>
                                     <th>Cost Range</th>
                                     <th>Details</th>
                                 </tr>
@@ -348,6 +348,7 @@
                             </div>
                         </div>
                     </div>
+                    <p>Note: CF (Coincidence Factor) is used in the 220.83 method to account for the fact that some appliances are not used at the same time.</p>
                     <p>Click the "📋 Details" button for any appliance to see comprehensive product information, including all available data from our database.</p>
                 </div>
                 <form class="checklist-form" autocomplete="off">
