Add print button to print appliances table and local calculation results

--- a/index.html
+++ b/index.html
@@ -369,11 +369,16 @@
                     <ul>
                         <li>Timeline planning: which of these projects do you want to do first?
                             <ul>
-                                <li>If you're using the bottom-up approach (NEC 220.83), you can do it all at once.</li>
-                                <li>If you're using the top-down approach (NEC 220.87), it helps to break up your project into phases. For example, you might do your heating system first, then your water heater, then your cooking appliances, etc. Between each project you can take 30 days to recalculate your remaining panel capacity.</li>
+                                <li>If you're using the bottom-up approach (NEC 220.83), you can do it all at once</li>
+                                <li>If you're using the top-down approach (NEC 220.87), it helps to break up your project into phases and check your new peak load after each phase. For example, you might do your heating system first, then your water heater, then your cooking appliances, etc. Between each project you can take 30 days to recalculate your remaining panel capacity</li>
                             </ul>
                         </li>
-                        <li>Budget considerations: what is your budget for this project?</li>
+                        <li>Budget considerations: what is your budget for this project?
+                            <ul>
+                                <li>More efficient appliances might cost a bit more upfront, but they will save you money in the long run</li>
+                                <li>Installation costs can vary greatly depending on the complexity of the project and the contractor you hire</li>
+                            </ul>
+                        </li>
                         <li>Incentives and rebates: what incentives and rebates are available for your project?
                             <ul>
                                 <li>There are many rebates and incentives available for electrification projects</li>
@@ -410,6 +415,7 @@
     </div>
     <div id="versionInfo" class="version-info"></div>
     <script src="script.js"></script>
+    <script src="print.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html> 
