Added URL parameters for panel size, top-down capacity, and bottom-up capacity; also updated README.md to reflect new features

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button id="reset-button" class="reset-button" aria-label="Reset all data">
             Reset All Data
         </button>
+        
+
 
         <main>
             <section id="projectInfo" class="step-content">
@@ -214,7 +216,7 @@
             <section id="loadAnalysis" class="step-content">
                 <h2>4. Current Load Analysis</h2>
                 <p>Now we need to analyze how much remaining panel capacity you have for electrification. This step is required to proceed.</p>
-                <p>We can do this in two ways:</p>
+                <p>We can do this two different ways, and you can use either or both methods:</p>
                 <ol>
                     <li>Top-down approach: Use your actual electricity usage data to determine your available panel capacity.</li>
                     <li>Bottom-up approach: Calculate your available panel capacity by adding up your current electrical loads.</li>
