--- a/index.html
+++ b/index.html
@@ -195,8 +195,14 @@
                             <li>Your panel type 
                                 <span class="tooltip-container"><span class="tooltip">Some panel types are dangerous and need to be replaced, like Federal Pacific, Zinsco, Stablock & Pushmatic. Note: a panel replacement is much easier than upsizing a panel.</span>ⓘ</span>
                             </li>
-                            <li>The number of available breaker slots, or if tandem breakers are already being used
-                                <span class="tooltip-container"><span class="tooltip">Tandem (or twin, slimline or duplex) breakers are two breakers in one slot. This is a common way to save space on a panel.</span>ⓘ</span>
+                            <li>The number of available breaker slots
+                                <span class="tooltip-container"><span class="tooltip">These open slots can be used to add more appliances to your panel.</span>ⓘ</span>
+                            </li>
+                            <li>Whether tandem breakers are already being used
+                                <span class="tooltip-container"><span class="tooltip">Tandem (or twin, slim or duplex) breakers are two breakers occupying a single breaker slot. This is a common way to save space on a panel.</span>ⓘ</span>
+                            </li>
+                            <li>If some of the existing breakers can be combined
+                                <span class="tooltip-container"><span class="tooltip">It is often possible to combine lighting circuits since modern LED lights are very low power.</span>ⓘ</span>
                             </li>
                             <li>Whether there's physical space to add a subpanel
                                 <span class="tooltip-container"><span class="tooltip">A subpanel is a smaller electrical panel that is connected to your main panel. It can be used to add more electrical capacity to your home.</span>ⓘ</span>
@@ -285,12 +291,17 @@
                 <h2>5. Optional Natural Gas Analysis</h2>
                 
                 <div class="content-box">
-                    <p>If you have your home's natural gas usage data for the past year we can do some additional analysis, such as analyzing the impact on your bill of switching from natural gas to electric appliances, and estimating the size of a new heat pump for heating your home. </p>
+                    <p>If you have your home's natural gas usage data for the past year we can do some additional analysis, including: 
+                        <ul>
+                            <li>Estimating the <b>impact on your bill</b> of switching from natural gas to electric appliances</li>
+                            <li>Estimating the <b>size of a new heat pump</b> for heating your home</li>
+                        </ul>
+                    </p>
                     <p>Please note these are rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
                     <p>Here are the steps to follow:</p>
                     <ol>
-                        <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> and follow the directions within it.</li>
-                        <li>Enter your monthly natural gas usage data into the spreadsheet.</li>
+                        <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions.</li>
+                        <li>Enter your <b>monthly natural gas usage data</b> into the spreadsheet.</li>
                         <li>Answer other questions about your home and natural gas usage.</li>
                         <li>See the results in the spreadsheet.</li>
                     </ol>
@@ -371,8 +382,11 @@
                     <ul>
                         <li>Timeline planning: which of these projects do you want to do first?
                             <ul>
-                                <li>If you're using the bottom-up approach (NEC 220.83), you can do it all at once</li>
-                                <li>If you're using the top-down approach (NEC 220.87), it helps to break up your project into phases and check your new peak load after each phase. For example, you might do your heating system first, then your water heater, then your cooking appliances, etc. Between each project you can take 30 days to recalculate your remaining panel capacity</li>
+                                <li>If you're using the bottom-up load calculation (NEC 220.83), you can do it all at once</li>
+                                <li>If you're using the top-down load calculation (NEC 220.87), 
+                                    it helps to break up your project into phases and check your new peak load after each phase. 
+                                    For example, you might upgrace your heating system first, then your water heater, then your cooking appliance. 
+                                    Between each project you can take 30 days to recalculate your remaining panel capacity</li>
                             </ul>
                         </li>
                         <li>Budget considerations: what is your budget for this project?
