Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                 <li>If you're using the bottom-up load calculation (NEC 220.83), you can do it all at once</li>
                                 <li>If you're using the top-down load calculation (NEC 220.87), 
                                     it helps to break up your project into phases and check your new peak load after each phase. 
-                                    For example, you might upgrace your heating system first, then your water heater, then your cooking appliance. 
+                                    For example, you might upgrade your heating system first, then your water heater, then your cooking appliance. 
                                     Between each project you can take 30 days to recalculate your remaining panel capacity</li>
                             </ul>
                         </li>
