Fix minor typos and improve wording

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>2. Electrification Goals</h2>
                 <div class="content-box">
                     <h3>Which of these are needed to fully electrify your home?</h3>
-                    <p>Let's identify which appliances are needed to fully electricfy your home. </p>
+                    <p>Let's identify which appliances are needed to fully electrify your home. </p>
                     <p>To future proof your home, we recommend building a plan that includes ALL of your electrification needs upfront, then you can stage them at your convenience. 
                         There's no need to do them all at once, but since electric capacity is limited it's best to plan for all of them upfront.</p>
                     
@@ -291,13 +291,13 @@
                 <h2>5. Optional Natural Gas Analysis</h2>
                 
                 <div class="content-box">
-                    <p>If you have your home's natural gas usage data for the past year we can do some additional analysis, including: 
+                    <p>If you have your home's natural gas usage data for the past year it's possible to do some additional analysis, including: 
                         <ul>
                             <li>Estimating the <b>impact on your bill</b> of switching from natural gas to electric appliances</li>
                             <li>Estimating the <b>size of a new heat pump</b> for heating your home</li>
                         </ul>
                     </p>
-                    <p>Please note these are rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
+                    <p>Please note these calculations will result in only rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
                     <p>Here are the steps to follow:</p>
                     <ol>
                         <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions.</li>
