Added links to other natural gas analysis tools

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
             Reset All Data
         </button>
         
-
-
         <main>
             <section id="projectInfo" class="step-content">
                 <h2>Welcome to the PanelWizard</h2>
@@ -289,23 +287,45 @@
 
             <section id="gasAnalysis" class="step-content">
                 <h2>5. Optional Natural Gas Analysis</h2>
-                
-                <div class="content-box">
-                    <p>If you have your home's natural gas usage data for the past year it's possible to do some additional analysis, including: 
-                        <ul>
-                            <li>Estimating the <b>impact on your bill</b> of switching from natural gas to electric appliances</li>
-                            <li>Estimating the <b>size of a new heat pump</b> for heating your home</li>
-                        </ul>
-                    </p>
-                    <p>Please note these calculations will result in only rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
-                    <p>Here are the steps to follow:</p>
+                <p>If you have your home's natural gas usage data for the past year it's possible to do some additional analysis, including: 
+                    <ul>
+                        <li>Estimating the <b>impact on your bill</b> of switching from natural gas to electric appliances</li>
+                        <li>Estimating the <b>size of a new heat pump</b> for heating your home</li>
+                    </ul>
+                </p>
+                <p>Please note these calculations will result in only rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
+                <p>We can do this several different ways, and you can use whichever method works best for you:</p>
+
+                <section id="step5-1" class="content-box">
+                    <h3>5.1 Home Energy Academy Electrification Calculator</h3>
+                    <p>Use the Home Energy Academy's free electrification calculator tool to analyze your gas usage data:</p>
                     <ol>
-                        <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions.</li>
-                        <li>Enter your <b>monthly natural gas usage data</b> into the spreadsheet.</li>
-                        <li>Answer other questions about your home and natural gas usage.</li>
-                        <li>See the results in the spreadsheet.</li>
+                        <li>Visit the <a href="https://www.homeenergyacademy.com/electrify" target="_blank">Electrification Calculator</a></li>
+                        <li>Enter your natural gas usage data</li>
+                        <li>Follow the tool's instructions to get cost impact estimates</li>
                     </ol>
-                </div>
+                </section>
+
+                <section id="step5-2" class="content-box">
+                    <h3>5.2 PG&E HomeIntel Service</h3>
+                    <p>Use PG&E's HomeIntel service for natural gas analysis (free for PG&E customers):</p>
+                    <ol>
+                        <li>Sign up for <a href="https://join.hea.com/" target="_blank">PG&E's HomeIntel service</a></li>
+                        <li>Authorize the service to access your PG&E energy data</li>
+                        <li>Follow the tool's instructions to get detailed analysis results</li>
+                    </ol>
+                </section>
+
+                <section id="step5-3" class="content-box">
+                    <h3>5.3 Spreadsheet Method</h3>
+                    <p>Use a simple spreadsheet tool for natural gas analysis:</p>
+                    <ol>
+                        <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions</li>
+                        <li>Enter your <b>monthly natural gas usage data</b> into the spreadsheet</li>
+                        <li>Answer other questions about your home and natural gas usage</li>
+                        <li>See the results in the spreadsheet</li>
+                    </ol>
+                </section>
 
                 <form class="checklist-form" autocomplete="off">
                     <div class="checkbox-group">
