Update text to be more clear.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 <h2>Welcome to the PanelWizard</h2>
                 <div class="content-box">
                     <h3>Your Home Electrification Planning Tool</h3>
-                    <p>PanelWizard helps you plan your home's transition to an all-electric future without a costly and time-consuming electrical panel upgrade. 
-                        Upsizing a home's electrical service (details <a href="https://www.canarymedia.com/articles/guides-and-how-tos/so-you-want-to-electrify-your-home-do-you-need-a-panel-upgrade-first" target="_blank">here</a>) can cost from $3,000 to $30,000 and take 3 to 18 months 
+                    <p>PanelWizard is a tool that helps homeowners/users plan to fully electrify their home without an electrical panel upgrade. Electric panel upgrades are expensive and time-consuming; upsizing a home's electrical service 
+                        (details <a href="https://www.canarymedia.com/articles/guides-and-how-tos/so-you-want-to-electrify-your-home-do-you-need-a-panel-upgrade-first" target="_blank">here</a>) can cost anywhere from $3,000 to $30,000 and take between 3 and 18 months 
                         (report <a href="https://www.redwoodenergy.net/research/service-upgrades-for-electrification-retrofits-study-final-report-2" target="_blank">here</a>).
-                        The tool helps by analyzing your electrical panel capacity and providing a customized upgrade strategy.</p>
+                        This tool is designed to help homeowners assess whether they have sufficient electrical panel capacity to fully electrify their homes 
+                        and better understand their options for whole home electrification based on existing electrical panel capacity, historical energy data over the last 12 months and a list of customized appliance options.</p>
                     <p>This tool is being developed under a <a href="https://www.energizeinnovation.fund/projects/decision-tool-electrify-homes-limited-electrical-panel-capacity#tab-overview" target="_blank">grant</a> from the California Energy Commission.</p>
                     <div class="project-form">
                         <h3>Project Management</h3>
@@ -94,7 +95,9 @@
                                                 <div class="input-row">
                                                     <input type="number" min="6000" max="120000" value="30000" name="heating_1_capacity" step="6000" placeholder="30000" class="heating-capacity-input">
                                                     <span class="unit-label">BTU/h capacity</span>
-                                                    <span class="tooltip-container"><span class="tooltip">BTUs per hour (Btu/h) is a measure of heating capacity of natural gas heaters and usually appears on the unit. Step increment for this field is 6,000 BTU/h (½ ton units).</span>ⓘ</span>
+                                                    <span class="tooltip-container"><span class="tooltip">BTUs per hour (Btu/h) is a measure of heating capacity of natural gas heaters. 
+                                                        It usually appears on a label directly on the unit, sometimes inside the front cover. 
+                                                        Usually it is some multiple of 6,000 BTU/h (½ ton units).</span>ⓘ</span>
                                                 </div>
                                                 <div class="description">with a new electric heat pump. 
                                                     <span class="tooltip-container"><span class="tooltip">A heat pump is a device that transfers heat from one location to another, rather than generating heat directly. It provides both heating and cooling, and is more efficient than a gas heater.</span>ⓘ</span>
