Improvements to text

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                     <h3>Your Home Electrification Planning Tool</h3>
                     <p>PanelWizard is a tool that helps homeowners/users plan to fully electrify their home without an electrical panel upgrade. Electric panel upgrades are expensive and time-consuming; upsizing a home's electrical service 
                         (details <a href="https://www.canarymedia.com/articles/guides-and-how-tos/so-you-want-to-electrify-your-home-do-you-need-a-panel-upgrade-first" target="_blank">here</a>) can cost anywhere from $3,000 to $30,000 and take between 3 and 18 months 
-                        (report <a href="https://www.redwoodenergy.net/research/service-upgrades-for-electrification-retrofits-study-final-report-2" target="_blank">here</a>).
-                        This tool is designed to help homeowners assess whether they have sufficient electrical panel capacity to fully electrify their homes 
+                        (report <a href="https://www.redwoodenergy.net/research/service-upgrades-for-electrification-retrofits-study-final-report-2" target="_blank">here</a>).</p>
+                    <p>This tool is designed to help homeowners assess whether they have sufficient electrical panel capacity to fully electrify their homes 
                         and better understand their options for whole home electrification based on existing electrical panel capacity, historical energy data over the last 12 months and a list of customized appliance options.</p>
-                    <p>This tool is being developed under a <a href="https://www.energizeinnovation.fund/projects/decision-tool-electrify-homes-limited-electrical-panel-capacity#tab-overview" target="_blank">grant</a> from the California Energy Commission.</p>
                     <div class="project-form">
                         <h3>Project Management</h3>
                         <p>Start a new project or open an existing one from a file.</p>
@@ -191,32 +190,32 @@
                             Or try using the <a href="https://www.kopperfield.com/panel-schedule" target="_blank">Kopperfield panel schedule tool</a> - it can help determine your panel size from a photo!</p><br>
                     </form>
                     <h3>Additional Equipment Information</h3>
-                    <p>In a future version of this tool, we may also ask about other useful information including: 
+                    <p>Later you may want to gather more information about your electrical panel, including: 
                         <ul>
-                            <li>Your panel type 
+                            <li>Is your existing electric panel dangerous? 
                                 <span class="tooltip-container"><span class="tooltip">Some panel types are dangerous and need to be replaced, like Federal Pacific, Zinsco, Stablock & Pushmatic. Note: a panel replacement is much easier than upsizing a panel.</span>ⓘ</span>
                             </li>
-                            <li>The number of available breaker slots
+                            <li>How many available breaker slots do you have?
                                 <span class="tooltip-container"><span class="tooltip">These open slots can be used to add more appliances to your panel.</span>ⓘ</span>
                             </li>
-                            <li>Whether tandem breakers are already being used
+                            <li>Are tandem breakers already being used?
                                 <span class="tooltip-container"><span class="tooltip">Tandem (or twin, slim or duplex) breakers are two breakers occupying a single breaker slot. This is a common way to save space on a panel.</span>ⓘ</span>
                             </li>
-                            <li>If some of the existing breakers can be combined
+                            <li>Can some of the existing breakers be combined?
                                 <span class="tooltip-container"><span class="tooltip">It is often possible to combine lighting circuits since modern LED lights are very low power.</span>ⓘ</span>
                             </li>
-                            <li>Whether there's physical space to add a subpanel
+                            <li>Is there physical space available to add a subpanel?
                                 <span class="tooltip-container"><span class="tooltip">A subpanel is a smaller electrical panel that is connected to your main panel. It can be used to add more electrical capacity to your home.</span>ⓘ</span>
                             </li>
-                            <li>If you have any unused 240 volt outlets (like for an unused electric dryer or cooktop)
+                            <li>Do you have any unused 240 volt outlets (like for an unused electric dryer or cooktop)?
                                 <span class="tooltip-container"><span class="tooltip">These unused 240 volt outlets can possibly be used by the new appliances you're adding.</span>ⓘ</span>
                             </li>
-                            <li>If you have any existing 240 volt outlets that can be shared using a smart circuit splitter
+                            <li>Do you have any existing 240 volt outlets that can be shared using a smart circuit splitter?
                                 <span class="tooltip-container"><span class="tooltip">A smart circuit splitter can be used to share a 240 volt outlet between two appliances. This is a common way to avoid upsizing your panel.</span>ⓘ</span>
                             </li>
                         </ul>
                     </p>
-                    <p>But for now the panel size is the most important information.</p>
+                    <p>These details are not required for an initial electrification assessment.</p>
                 </div>
             </section>
 
@@ -240,7 +239,7 @@
                         <li>Run the calculator to see your available capacity and enter it below</li>
                     </ol><br>
                     <form class="form-group">
-                        <label for="topDownCapacity">Available Capacity (Amps):</label>
+                        <label for="topDownCapacity">Existing Available Capacity (Amps):</label>
                         <input 
                             type="number" 
                             id="topDownCapacity" 
@@ -266,7 +265,7 @@
                         <li>Run the calculator to see your available capacity</li>
                     </ol><br>
                     <form class="form-group">
-                        <label for="bottomUpCapacity">Available Capacity (Amps):</label>
+                        <label for="bottomUpCapacity">Existing Available Capacity (Amps):</label>
                         <input 
                             type="number" 
                             id="bottomUpCapacity" 
@@ -289,7 +288,7 @@
             </section>
 
             <section id="gasAnalysis" class="step-content">
-                <h2>5. Optional Natural Gas Analysis</h2>
+                <h2>5. Natural Gas Analysis -- Optional</h2>
                 <p>If you have your home's natural gas usage data for the past year it's possible to do some additional analysis, including: 
                     <ul>
                         <li>Estimating the <b>impact on your bill</b> of switching from natural gas to electric appliances</li>
@@ -314,7 +313,7 @@
                     <p>Use PG&E's HomeIntel service for natural gas analysis (free for PG&E customers):</p>
                     <ol>
                         <li>Sign up for <a href="https://join.hea.com/" target="_blank">PG&E's HomeIntel service</a></li>
-                        <li>Authorize the service to access your PG&E energy data</li>
+                        <li>Authorize access to your PG&E energy data</li>
                         <li>Follow the tool's instructions to get detailed analysis results</li>
                     </ol>
                 </section>
