--- a/index.html
+++ b/index.html
@@ -363,6 +363,27 @@
                             </tbody>
                         </table>
                         
+                        <!-- Power Reduction Options - shown when over capacity -->
+                        <div id="powerReductionOptions" class="power-reduction-options" style="display: none;">
+                            <h3>Power Reduction Options</h3>
+                            <p>The appliances you've selected exceed your available panel capacity. Here are some strategies to resolve this:</p>
+                            <ul>
+                                <li>
+                                    <strong>Circuit Sharing:</strong> Use existing 240V outlets for multiple appliances. You can share circuits between appliances that aren't used simultaneously (e.g., a dryer and an EV charger).
+                                </li>
+                                <li>
+                                    <strong>Circuit Pausers:</strong> Install smart devices that automatically pause certain circuits when others are in use. This allows multiple high-load appliances to share a single circuit safely.
+                                </li>
+                                <li>
+                                    <strong>Smart Panels:</strong> Consider upgrading to a smart panel that can intelligently manage and distribute power across your circuits to prevent overloads.
+                                </li>
+                                <li>
+                                    <strong>Meter Socket Adapters:</strong> Install a meter socket adapter that provides additional circuits without needing a full panel upgrade.
+                                </li>
+                            </ul>
+                            <p>You may also consider selecting lower-power appliance options from the table above, or consulting with a qualified electrician to explore the best solution for your specific situation.</p>
+                        </div>
+                        
                         <div class="csv-summary">
                             <div class="calculation-results">
                                 <h4>Calculation Methods</h4>
@@ -380,6 +401,7 @@
                                         <p><strong>Remaining Capacity:</strong> <span id="remainingCsvCapacity2">0</span> amps</p>
                                     </div>
                                 </div>
+                                <!-- Print button goes here -->
                             </div>
                         </div>
                     </div>
