Added examples of power management devices

--- a/index.html
+++ b/index.html
@@ -369,16 +369,20 @@
                             <p>The appliances you've selected exceed your available panel capacity. Here are some strategies to resolve this:</p>
                             <ul>
                                 <li>
-                                    <strong>Circuit Sharing:</strong> Use existing 240V outlets for multiple appliances. You can share circuits between appliances that aren't used simultaneously (e.g., a dryer and an EV charger).
+                                    <strong>Circuit Sharing:</strong> Use existing 240V outlets for multiple appliances. You can share circuits between appliances that aren't used simultaneously (e.g., a dryer and an EV charger). 
+                                    Examples include NeoCharge, Dryer Buddy, EasySplit and others.
                                 </li>
                                 <li>
                                     <strong>Circuit Pausers:</strong> Install smart devices that automatically pause certain circuits when others are in use. This allows multiple high-load appliances to share a single circuit safely.
+                                    Examples include DCC-9, SimpleSwitch and others.
                                 </li>
                                 <li>
                                     <strong>Smart Panels:</strong> Consider upgrading to a smart panel that can intelligently manage and distribute power across your circuits to prevent overloads.
+                                    Examples include SPAN, Schneider, Leviton and others.
                                 </li>
                                 <li>
                                     <strong>Meter Socket Adapters:</strong> Install a meter socket adapter that provides additional circuits without needing a full panel upgrade.
+                                    Examples include ConnectDER, SPAN Edge, Tesla and others.
                                 </li>
                             </ul>
                             <p>You may also consider selecting lower-power appliance options from the table above, or consulting with a qualified electrician to explore the best solution for your specific situation.</p>
